--- a/DOM/one.html
+++ b/DOM/one.html
@@ -4,13 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM Learning</title>
+    <title>DOM Learning
+
+    </title>
+    <style>
+        .bg-black{
+            background-color: black;
+            color: aquamarine;
+        }
+    </style>
 </head>
 <body>
     <div class="bg-black">
-        <h1 class="heading">DOM learning </h1>
+        <h1 id="title" class="heading">DOM learning <span style="display: none;">Text Text</span> </h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas laboriosam ab et ea iste aliquam hic qui ipsa cumque recusandae. Consectetur omnis soluta dolores eum deserunt aliquam, suscipit placeat magni.</p>
-
+        <ul>
+            <li class="list">one</li>
+            <li class="list">two</li>
+        </ul>
     </div>
     
 </body>
